# aoc_2024

./: .gitignore  Cargo.toml  README.md  visualization_notes.md
.github/workflows/: readme-stars.yml
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  helpers.rs  lib.rs  main.rs  template.rs
src/example/: day_07.txt
