[package]
name = "aoc"
version = "0.14.1"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>", "Zoey Fahner"]
edition = "2021"
default-run = "aoc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
itertools = { version = "0.10.5", git = "https://www.github.com/ejmount/itertools" }
rayon = "1.6.0"
rustc-hash = "1.1.0"
# These are used for visualizations only
image = "0.24.5"
rand = "0.8.5"

[profile.test]
opt-level = 3
default = ["viz"]

[features]
viz = []