[package]
name = "aoc"
version = "0.14.1"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>", "Zoey Fahner"]
edition = "2021"
default-run = "aoc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
itertools = { version = "0.10.5", git = "https://www.github.com/ejmount/itertools" }
rayon = "1.6.0"
rustc-hash = "1.1.0"
regex = "1.7.0"
# For Day 15 at least
pathfinding = "4.2.1"
# For primitive types to enum casts
enum-primitive-derive = "^0.1"
num-traits = "^0.1"
# Logging
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_warn"] }

[profile.test]
opt-level = 3
