[package]
name = "aoc"
version = "0.14.1"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>", "Zoey Fahner"]
edition = "2021"
default-run = "aoc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
fxhash = "0.2.1"
itertools = "0.13.0"
num = "0.4.1"
rayon = "1.10.0"
regex = "1.11.1"

# Logging
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }

[profile.test]
opt-level = 3
